# puppies

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  contributing.html  genindex.html  index.html  license.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: python-package.yml
_sources/: index.txt
docs/: Makefile  WASP18b_eclipse.rst  conf.py  getstarted.rst  index.rst  install.rst  license.rst  make.bat  pup_marker.rst  wasp43b_eclipse.rst
puppies/: VERSION.py  __init__.py  __main__.py  driver.py  laika.py  pup_badpix.py  pup_center.py  pup_model.py  pup_photom.py  spitzer.py  version.py
puppies/center/: __init__.py  center_of_light.py  col.py  driver.py  gaussian.py  least_asym.py
puppies/core/: __init__.py  pup_badpix.py  pup_center.py  pup_model.py  pup_photom.py
puppies/data/: dogs_of_the_day.txt
puppies/image/: __init__.py  disk.py  imedit.py
puppies/inst/: __init__.py  pup_spitzer.py
puppies/instruments/: __init__.py  pup_spitzer.py
puppies/io/: __init__.py  io.py  loadsave.py
puppies/models/: __init__.py  bliss.py  eclipse.py  expramp.py  linramp.py  mandelecl.py  mandeltr.py  ophase.py  quadramp.py  ramps.py
puppies/photometry/: __init__.py
src_c/: _aphot.c  _asymmetry.c  _bilinint.c  _disk.c  _eclipse.c  _expramp.c  _gauss.c  _linramp.c  _mandelecl.c  _mandeltr.c  _quadramp.c  aphot.c  asymmetry.c  cdisk.c  disk.c  gauss.c  least_asym.c
tests/: test_stats.py  test_tools.py
(+29 files in other folders)
